# internal/domain/dto/error.go
@@ -4,12 +4,14 @@ package dto
 ///
 var Err = map[int]*ResponseDto {
 	4001: {4001, nil, "code.param.miss" /**/ /**/},
-	// 4002: {4002, nil, "url.param.miss" /**/ /**/},
-	4003: {4003, nil, "entid.param.miss" /**/ /**/},
-	4004: {4004, nil, "name.param.miss" /**/ /**/},
-	4005: {4005, nil, "id.param.miss" /**/ /**/},
-	// 4006: {4006, nil, "name.param.miss" /**/ /**/},
-	// 4007: {4007, nil, "desc.param.miss" /**/ /**/},
+	4002: {4002, nil, "openid.param.miss" /**/ /**/},
+	// 4003: {4003, nil, "url.param.miss" /**/ /**/},
+	4004: {4004, nil, "entid.param.miss" /**/ /**/},
+	4005: {4005, nil, "name.param.miss" /**/ /**/},
+	4006: {4006, nil, "id.param.miss" /**/ /**/},
+	// 4007: {4007, nil, "name.param.miss" /**/ /**/},
+	// 4008: {4008, nil, "desc.param.miss" /**/ /**/},
+	4009: {4009, nil, "sig.param.miss" /**/ /**/},
 }
 
 func init() {
